--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
               </a>              
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="https://goo.gl/maps/nhMr1WXXMUcQT7aX8" class="tm-contact-item-link">
+              <a href=https://maps.app.goo.gl/dGoYMMxmZARMgsTd8" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-map-marker-alt mr-4"></i>
-                  <span class="mb-0">Beco dos Escoteiros - Lomba do Pinheiro, Viamão - RS</span>
+                  <span class="mb-0">Rua Waldomiro Schapke, 11 - Partenon.</span>
               </a>              
             </div>
         </div>
