--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <div class="tm-underline-inner"></div>
                 </div>
                 <p class="mb-5">
-                  Tem duvidas? Nos chame por whatsapp ou mande um email e nós responderemos quando pudermos!
+                  Tem duvidas? Nos chame no insta ou mande um email e nós responderemos quando pudermos!
                 </p>
               <h4>Clique Nos icones para ser redirecionado</h4>
             </div>
@@ -190,7 +190,12 @@
               <a href="mailto:clacavaleironegro@gmail.com" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
                   <span class="mb-0">clacavaleironegro@gmail.com</span>
-              </a>              
+              </a>     
+               <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
+              <a href="https://www.instagram.com/clacavaleironegro/" class="tm-contact-item-link">
+                  <i class="fas fa-3x fa-envelope mr-4"></i>
+                  <span class="mb-0">@claCavaleiroNegro</span>
+              </a>   
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <a href=https://maps.app.goo.gl/dGoYMMxmZARMgsTd8" class="tm-contact-item-link">
